- [BUG FIX] Cache mode did't work. This bug is added after branching 6(master) and 5.x.
- [BUG FIX] Calculation from other contexts didn't work, and fix it.
- [BUG FIX] The class name 'Null' wasn't permitted in PHP7. It was changed to NullDB.
- [BUG FIX] Local context values didn't involve in any calculations.
- [INFO] The src/lib/js_lib directory is removed.

Ver.5.11 (November 17, 2019)
- Support FileMaker Data API of FileMaker Server 18 and FileMaker Cloud for AWS 1.18.
- Update FMDataAPI.php (Ver.20) and DB_FileMaker_DataAPI.php for FileMaker Data API.
- Improve handling Microsoft Office documents in MediaAccess class (Thanks to Mr. Takayoshi Wada).
- Reduce error messages when using PHP 7.x, DB_FileMaker_FX class and portal access mode.
- Improve stability of INTERMediatorLib.getParentRepeaters in some cases.
- Update deploy.sh and Vagrantfile etc. for the INTER-Mediator-Server VM (Update to Alpine Linux 3.10).

Ver.5.10 (April 17, 2019)
- The Japanese new gengo REIWA is supported in the date formatter.
- In the PDO connection string for MySQL uses host=localhost instead of unix_socket=.
- [BUG FIX] RSA parameters for phpseclib v2 are set as the correct description with const parameters.
- [BUG FIX] New LDAP user couldn't log in after Ver.5.8.
- [BUG FIX] New LDAP user required 2 log-in trial after Ver.5.2.
- [BUG FIX] After the password of ldap user is changed, propagation of the new password is improved.
- [BUG FIX] Fix handling starting dates of the Japanese new era in the date formatter.

Ver.5.9 (January 29, 2019)
- Reduce error messages when using PHP 7.2 and DB_FileMaker_DataAPI class.
- [BUG FIX] Fix compatibility with PHP 5.6.40 (Thanks to Kenzo Nakata).
- [BUG FIX] Modify GenerateJSCode.php to fix compatibility with XAMPP for Windows.
- [BUG FIX] Fix showing images in FileMaker container fields with multibyte database name.
- [BUG FIX] If someone loges in after self-service enrollment, enrollment info in issued hash table was eliminated.